[gd_scene load_steps=2 format=3 uid="uid://qycjatcecd20"]

[ext_resource type="Script" path="res://Scenes/EnemyStateMachine/flying_idle_state.gd" id="1_sjq1u"]

[node name="FlyingIdleState" type="Node"]
script = ExtResource("1_sjq1u")

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
